--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -57,7 +57,7 @@ nav ul{
 .featured-image{
     width: 100%;
     max-height: 300px;
-    object-fit: contain;
+    object-fit: cover;
     object-position: center;
 }
 
@@ -107,3 +107,4 @@ footer{
         padding: 0;
     }
 }
+
